@@ -13,10 +13,10 @@
 
 Relocation section '\.rela\.text' at offset 0x[0-9a-f]+ contains 1 entries:
 .*
-00000220  000000a5 R_SH_RELATIVE +00000224
+000001f8  000000a5 R_SH_RELATIVE +000001fc
 
 Hex dump of section '\.rela\.text':
-  0x0000020c          00000224 000000a5 00000220 .*
+  0x000001e4          000001fc 000000a5 000001f8 .*
 
 Hex dump of section '\.text':
-  0x00000218          00000224 00090009 00090009 .*
+  0x000001f0          000001fc 00090009 00090009 .*
